syntax = "proto3";

import "aelf/options.proto";
import "aelf/core.proto";
import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";
import "acs1.proto";

option csharp_namespace = "AElf.Contracts.TestContract.VirtualFunction";

service VirtualFunctionContract {
  option (aelf.csharp_state) = "AElf.Contracts.TestContract.VirtualFunction.State";
  option (aelf.base) = "acs1.proto";
  
  rpc VirtualAddressVote(VirtualAddressVoteInput) returns (google.protobuf.Empty);
  rpc VirtualAddressWithdraw(aelf.Hash) returns (google.protobuf.Empty);
  
  rpc GetVirtualAddress(google.protobuf.Empty) returns (aelf.Address) {
    option (aelf.is_view) = true;
  }
}

message VirtualAddressVoteInput {
  string pub_key = 1;
  int64 amount = 2;
  google.protobuf.Timestamp end_timestamp = 3;
  // Used to generate vote id.
  aelf.Hash token = 4;
}